--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefualtConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=DB_WebApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefualtConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Db_WebApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
+
+
+
+
